# Magnety-simulace

./: .gitmodules  CMakeLists.txt  Magnety.sln  Magnety.vcxproj  Magnety.vcxproj.filters  Main.cpp  README.md  imgui.ini
Debug/: Magnety.exe.recipe  Magnety.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/Magnety.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Magnety.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
